@@ -27,6 +27,7 @@
  - Describe version requirements in a JSON file, `requirements.json`.
  - Doxygen documentation now uses the (Doxygen-extended) Markdown format.
  - Building docs in `doc/html/`, no longer in `doc/html/Reference/`.
+ - Disable some `std::filesystem` features on Windows.
 7.6.0
  - Removed bad string conversion to `std::basic_string_view<std::byte>`. (#463)
  - Add C++20 concepts: `binary`, `char_string`, `char_strings`.
